argparser, http ip:port,  profile_datadir config

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # please add your ide stuff here
-
 .idea
 .vscode
 
+# default data dirs
+*_profile/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
