Added JSON, made everything load from a profile.json

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -6,7 +6,7 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "Aspire Profile",
+      "name": "Aspire Profile (for Ethearnal)",
       "path": "",
       "files": {
         "83964324": {
@@ -31,9 +31,9 @@
           "output": "images/university.jpg",
           "name": "university.jpg",
           "category": "IMAGE",
-          "size": 167230,
+          "size": 106743,
           "type": "jpg",
-          "initialSize": 167230,
+          "initialSize": 106743,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -61,71 +61,6 @@
           "imported": false,
           "parents": [],
           "type": "jade"
-        },
-        "976bad3c": {
-          "id": "976bad3c",
-          "path": "images/paypal.jpg",
-          "output": "images/paypal.jpg",
-          "name": "paypal.jpg",
-          "category": "IMAGE",
-          "size": 16372,
-          "type": "jpg",
-          "initialSize": 16372,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "c4e5db29": {
-          "id": "c4e5db29",
-          "path": "images/qoute.png",
-          "output": "images/qoute.png",
-          "name": "qoute.png",
-          "category": "IMAGE",
-          "size": 798,
-          "type": "png",
-          "initialSize": 798,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "bd1cf411": {
-          "id": "bd1cf411",
-          "path": "images/file-images-add.png",
-          "output": "images/file-images-add.png",
-          "name": "file-images-add.png",
-          "category": "IMAGE",
-          "size": 638,
-          "type": "png",
-          "initialSize": 638,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "1d6b303c": {
-          "id": "1d6b303c",
-          "path": "images/image-video-image-file.png",
-          "output": "images/image-video-image-file.png",
-          "name": "image-video-image-file.png",
-          "category": "IMAGE",
-          "size": 1463,
-          "type": "png",
-          "initialSize": 1463,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "6f6acd1d": {
-          "id": "6f6acd1d",
-          "path": "images/education.jpg",
-          "output": "images/education.jpg",
-          "name": "education.jpg",
-          "category": "IMAGE",
-          "size": 3061,
-          "type": "jpg",
-          "initialSize": 3061,
-          "optimized": false,
-          "height": 0,
-          "width": 0
         },
         "75693b0c": {
           "id": "75693b0c",
@@ -442,45 +377,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "d5978211": {
-          "id": "d5978211",
-          "path": "images/background-picture.png",
-          "output": "images/background-picture.png",
-          "name": "background-picture.png",
-          "category": "IMAGE",
-          "size": 3771107,
-          "type": "png",
-          "initialSize": 3771107,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "fc182191": {
-          "id": "fc182191",
-          "path": "images/background-downtown.png",
-          "output": "images/background-downtown.png",
-          "name": "background-downtown.png",
-          "category": "IMAGE",
-          "size": 4151194,
-          "type": "png",
-          "initialSize": 4151194,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "c8e1f1f1": {
-          "id": "c8e1f1f1",
-          "path": "images/background-buildings.png",
-          "output": "images/background-buildings.png",
-          "name": "background-buildings.png",
-          "category": "IMAGE",
-          "size": 4423998,
-          "type": "png",
-          "initialSize": 4423998,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "72e087a0": {
           "id": "72e087a0",
           "path": "styles/imgareaselect-default.css",
@@ -623,45 +519,6 @@
           ],
           "type": "jade"
         },
-        "a6f2db6d": {
-          "id": "a6f2db6d",
-          "path": "images/kaiser.png",
-          "output": "images/kaiser.png",
-          "name": "kaiser.png",
-          "category": "IMAGE",
-          "size": 156229,
-          "type": "png",
-          "initialSize": 156229,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "27a26bb6": {
-          "id": "27a26bb6",
-          "path": "images/aspire-logo.png",
-          "output": "images/aspire-logo.png",
-          "name": "aspire-logo.png",
-          "category": "IMAGE",
-          "size": 36548,
-          "type": "png",
-          "initialSize": 36548,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "c610b3aa": {
-          "id": "c610b3aa",
-          "path": "images/university1.jpg",
-          "output": "images/university1.jpg",
-          "name": "university1.jpg",
-          "category": "IMAGE",
-          "size": 28610,
-          "type": "jpg",
-          "initialSize": 28610,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "bc4a88fb": {
           "id": "bc4a88fb",
           "path": "mixins/jobs/job-aspire.jade",
@@ -780,45 +637,6 @@
           "parents": [],
           "type": "jade"
         },
-        "6f10a60f": {
-          "id": "6f10a60f",
-          "path": "images/profilepicture.jpg",
-          "output": "images/profilepicture.jpg",
-          "name": "profilepicture.jpg",
-          "category": "IMAGE",
-          "size": 59039,
-          "type": "jpg",
-          "initialSize": 59039,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "ad8946a1": {
-          "id": "ad8946a1",
-          "path": "images/profilepicture.png",
-          "output": "images/profilepicture.png",
-          "name": "profilepicture.png",
-          "category": "IMAGE",
-          "size": 59039,
-          "type": "png",
-          "initialSize": 59039,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "91cd2f07": {
-          "id": "91cd2f07",
-          "path": "images/background-road-different.png",
-          "output": "images/background-road-different.png",
-          "name": "background-road-different.png",
-          "category": "IMAGE",
-          "size": 7539175,
-          "type": "png",
-          "initialSize": 7539175,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "ca624611": {
           "id": "ca624611",
           "path": "mixins/jobs/default-job.jade",
@@ -833,19 +651,6 @@
             "d2e2602f"
           ],
           "type": "jade"
-        },
-        "d7018332": {
-          "id": "d7018332",
-          "path": "images/panda-logo.png",
-          "output": "images/panda-logo.png",
-          "name": "panda-logo.png",
-          "category": "IMAGE",
-          "size": 8003,
-          "type": "png",
-          "initialSize": 8003,
-          "optimized": false,
-          "height": 0,
-          "width": 0
         },
         "9036f86e": {
           "id": "9036f86e",
@@ -989,19 +794,6 @@
           "imported": false,
           "parents": [],
           "type": "jade"
-        },
-        "74a3267a": {
-          "id": "74a3267a",
-          "path": "images/lamp.jpg",
-          "output": "images/lamp.jpg",
-          "name": "lamp.jpg",
-          "category": "IMAGE",
-          "size": 1848884,
-          "type": "jpg",
-          "initialSize": 1848884,
-          "optimized": false,
-          "height": 0,
-          "width": 0
         },
         "05c7ceca": {
           "id": "05c7ceca",
@@ -1158,6 +950,227 @@
             "59fd29df"
           ],
           "type": "sass"
+        },
+        "b204e622": {
+          "id": "b204e622",
+          "path": "images/dobri.png",
+          "output": "images/dobri.png",
+          "name": "dobri.png",
+          "category": "IMAGE",
+          "size": 486016,
+          "type": "png",
+          "initialSize": 486016,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "27a26bb6": {
+          "id": "27a26bb6",
+          "path": "images/aspire-logo.png",
+          "output": "images/aspire-logo.png",
+          "name": "aspire-logo.png",
+          "category": "IMAGE",
+          "size": 2581,
+          "type": "png",
+          "initialSize": 2581,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c8e1f1f1": {
+          "id": "c8e1f1f1",
+          "path": "images/background-buildings.png",
+          "output": "images/background-buildings.png",
+          "name": "background-buildings.png",
+          "category": "IMAGE",
+          "size": 951829,
+          "type": "png",
+          "initialSize": 951829,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d5978211": {
+          "id": "d5978211",
+          "path": "images/background-picture.png",
+          "output": "images/background-picture.png",
+          "name": "background-picture.png",
+          "category": "IMAGE",
+          "size": 689305,
+          "type": "png",
+          "initialSize": 689305,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fc182191": {
+          "id": "fc182191",
+          "path": "images/background-downtown.png",
+          "output": "images/background-downtown.png",
+          "name": "background-downtown.png",
+          "category": "IMAGE",
+          "size": 1229305,
+          "type": "png",
+          "initialSize": 1229305,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6f6acd1d": {
+          "id": "6f6acd1d",
+          "path": "images/education.jpg",
+          "output": "images/education.jpg",
+          "name": "education.jpg",
+          "category": "IMAGE",
+          "size": 1473,
+          "type": "jpg",
+          "initialSize": 1473,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "91cd2f07": {
+          "id": "91cd2f07",
+          "path": "images/background-road-different.png",
+          "output": "images/background-road-different.png",
+          "name": "background-road-different.png",
+          "category": "IMAGE",
+          "size": 2325174,
+          "type": "png",
+          "initialSize": 2325174,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a6f2db6d": {
+          "id": "a6f2db6d",
+          "path": "images/kaiser.png",
+          "output": "images/kaiser.png",
+          "name": "kaiser.png",
+          "category": "IMAGE",
+          "size": 18949,
+          "type": "png",
+          "initialSize": 18949,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1d6b303c": {
+          "id": "1d6b303c",
+          "path": "images/image-video-image-file.png",
+          "output": "images/image-video-image-file.png",
+          "name": "image-video-image-file.png",
+          "category": "IMAGE",
+          "size": 433,
+          "type": "png",
+          "initialSize": 433,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ad8946a1": {
+          "id": "ad8946a1",
+          "path": "images/profilepicture.png",
+          "output": "images/profilepicture.png",
+          "name": "profilepicture.png",
+          "category": "IMAGE",
+          "size": 18806,
+          "type": "png",
+          "initialSize": 18806,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6f10a60f": {
+          "id": "6f10a60f",
+          "path": "images/profilepicture.jpg",
+          "output": "images/profilepicture.jpg",
+          "name": "profilepicture.jpg",
+          "category": "IMAGE",
+          "size": 4573,
+          "type": "jpg",
+          "initialSize": 4573,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "976bad3c": {
+          "id": "976bad3c",
+          "path": "images/paypal.jpg",
+          "output": "images/paypal.jpg",
+          "name": "paypal.jpg",
+          "category": "IMAGE",
+          "size": 13525,
+          "type": "jpg",
+          "initialSize": 13525,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bd1cf411": {
+          "id": "bd1cf411",
+          "path": "images/file-images-add.png",
+          "output": "images/file-images-add.png",
+          "name": "file-images-add.png",
+          "category": "IMAGE",
+          "size": 288,
+          "type": "png",
+          "initialSize": 288,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d7018332": {
+          "id": "d7018332",
+          "path": "images/panda-logo.png",
+          "output": "images/panda-logo.png",
+          "name": "panda-logo.png",
+          "category": "IMAGE",
+          "size": 4114,
+          "type": "png",
+          "initialSize": 4114,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c610b3aa": {
+          "id": "c610b3aa",
+          "path": "images/university1.jpg",
+          "output": "images/university1.jpg",
+          "name": "university1.jpg",
+          "category": "IMAGE",
+          "size": 21742,
+          "type": "jpg",
+          "initialSize": 21742,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "74a3267a": {
+          "id": "74a3267a",
+          "path": "images/lamp.jpg",
+          "output": "images/lamp.jpg",
+          "name": "lamp.jpg",
+          "category": "IMAGE",
+          "size": 426630,
+          "type": "jpg",
+          "initialSize": 426630,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c4e5db29": {
+          "id": "c4e5db29",
+          "path": "images/qoute.png",
+          "output": "images/qoute.png",
+          "name": "qoute.png",
+          "category": "IMAGE",
+          "size": 286,
+          "type": "png",
+          "initialSize": 286,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
