Added ADD JOB modal

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -525,13 +525,11 @@
           "output": "mixins/jobs/job-aspire.html",
           "name": "job-aspire.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "c2012735": {
@@ -540,13 +538,11 @@
           "output": "mixins/jobs/job-kaiser.html",
           "name": "job-kaiser.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "dab9f9ba": {
@@ -555,13 +551,11 @@
           "output": "mixins/jobs/jobs-main-information.html",
           "name": "jobs-main-information.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "6877b5f3": {
@@ -570,13 +564,11 @@
           "output": "mixins/educations/education-main-information.html",
           "name": "education-main-information.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "ae3f7ee6": {
@@ -585,13 +577,11 @@
           "output": "mixins/educations/education-policy.html",
           "name": "education-policy.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "a368a4c5": {
@@ -600,13 +590,11 @@
           "output": "mixins/educations/education-electrical.html",
           "name": "education-electrical.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "7816cb5f": {
@@ -1171,6 +1159,62 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "e8fb32d5": {
+          "id": "e8fb32d5",
+          "path": "js/functions.js",
+          "output": "js/functions-dist.js",
+          "name": "functions.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "cbeead95": {
+          "id": "cbeead95",
+          "path": "styles/newstyles/modals.sass",
+          "output": "styles/newstyles/modals.css",
+          "name": "modals.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df"
+          ],
+          "type": "sass"
+        },
+        "aa76dcd9": {
+          "id": "aa76dcd9",
+          "path": "styles/newstyles/modals-content.sass",
+          "output": "styles/newstyles/modals-content.css",
+          "name": "modals-content.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
