--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1215,6 +1215,36 @@
             "59fd29df"
           ],
           "type": "sass"
+        },
+        "98c517ba": {
+          "id": "98c517ba",
+          "path": "mixins/modals/add-job.jade",
+          "output": "mixins/modals/add-job.html",
+          "name": "add-job.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "6ec51759": {
+          "id": "6ec51759",
+          "path": "mixins/modals/edit-job.jade",
+          "output": "mixins/modals/edit-job.html",
+          "name": "edit-job.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
         }
       },
       "deploymentHistory": {},
