--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -631,13 +631,11 @@
           "output": "mixins/jobs/default-job.html",
           "name": "default-job.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "9036f86e": {
@@ -1196,26 +1194,6 @@
           ],
           "type": "sass"
         },
-        "aa76dcd9": {
-          "id": "aa76dcd9",
-          "path": "styles/newstyles/modals-content.sass",
-          "output": "styles/newstyles/modals-content.css",
-          "name": "modals-content.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "59fd29df"
-          ],
-          "type": "sass"
-        },
         "98c517ba": {
           "id": "98c517ba",
           "path": "mixins/modals/add-job.jade",
@@ -1245,6 +1223,120 @@
             "d2e2602f"
           ],
           "type": "jade"
+        },
+        "69462bc2": {
+          "id": "69462bc2",
+          "path": "mixins/modals/add-education.jade",
+          "output": "mixins/modals/add-education.html",
+          "name": "add-education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "adb040f2": {
+          "id": "adb040f2",
+          "path": "mixins/modals/edit-education.jade",
+          "output": "mixins/modals/edit-education.html",
+          "name": "edit-education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "709c735c": {
+          "id": "709c735c",
+          "path": "styles/newstyles/modals/header.sass",
+          "output": "styles/newstyles/modals/header.css",
+          "name": "header.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df",
+            "cbeead95"
+          ],
+          "type": "sass"
+        },
+        "744b5c60": {
+          "id": "744b5c60",
+          "path": "styles/newstyles/modals/body.sass",
+          "output": "styles/newstyles/modals/body.css",
+          "name": "body.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df",
+            "cbeead95"
+          ],
+          "type": "sass"
+        },
+        "21f4844c": {
+          "id": "21f4844c",
+          "path": "styles/newstyles/modals/success-message.sass",
+          "output": "styles/newstyles/modals/success-message.css",
+          "name": "success-message.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df",
+            "cbeead95"
+          ],
+          "type": "sass"
+        },
+        "3c42bdda": {
+          "id": "3c42bdda",
+          "path": "styles/newstyles/modals/footer.sass",
+          "output": "styles/newstyles/modals/footer.css",
+          "name": "footer.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df",
+            "cbeead95"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
