--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -937,19 +937,6 @@
           ],
           "type": "sass"
         },
-        "b204e622": {
-          "id": "b204e622",
-          "path": "images/dobri.png",
-          "output": "images/dobri.png",
-          "name": "dobri.png",
-          "category": "IMAGE",
-          "size": 486016,
-          "type": "png",
-          "initialSize": 486016,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "27a26bb6": {
           "id": "27a26bb6",
           "path": "images/aspire-logo.png",
@@ -1008,10 +995,10 @@
           "output": "images/education.jpg",
           "name": "education.jpg",
           "category": "IMAGE",
-          "size": 1473,
+          "size": 1386,
           "type": "jpg",
           "initialSize": 1473,
-          "optimized": false,
+          "optimized": true,
           "height": 0,
           "width": 0
         },
@@ -1073,10 +1060,10 @@
           "output": "images/profilepicture.jpg",
           "name": "profilepicture.jpg",
           "category": "IMAGE",
-          "size": 4573,
+          "size": 4473,
           "type": "jpg",
           "initialSize": 4573,
-          "optimized": false,
+          "optimized": true,
           "height": 0,
           "width": 0
         },
@@ -1086,10 +1073,10 @@
           "output": "images/paypal.jpg",
           "name": "paypal.jpg",
           "category": "IMAGE",
-          "size": 13525,
+          "size": 10444,
           "type": "jpg",
           "initialSize": 13525,
-          "optimized": false,
+          "optimized": true,
           "height": 0,
           "width": 0
         },
@@ -1099,10 +1086,10 @@
           "output": "images/file-images-add.png",
           "name": "file-images-add.png",
           "category": "IMAGE",
-          "size": 288,
+          "size": 275,
           "type": "png",
           "initialSize": 288,
-          "optimized": false,
+          "optimized": true,
           "height": 0,
           "width": 0
         },
@@ -1138,10 +1125,10 @@
           "output": "images/lamp.jpg",
           "name": "lamp.jpg",
           "category": "IMAGE",
-          "size": 426630,
+          "size": 407016,
           "type": "jpg",
           "initialSize": 426630,
-          "optimized": false,
+          "optimized": true,
           "height": 0,
           "width": 0
         },
@@ -1193,66 +1180,6 @@
             "59fd29df"
           ],
           "type": "sass"
-        },
-        "98c517ba": {
-          "id": "98c517ba",
-          "path": "mixins/modals/add-job.jade",
-          "output": "mixins/modals/add-job.html",
-          "name": "add-job.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "6ec51759": {
-          "id": "6ec51759",
-          "path": "mixins/modals/edit-job.jade",
-          "output": "mixins/modals/edit-job.html",
-          "name": "edit-job.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "69462bc2": {
-          "id": "69462bc2",
-          "path": "mixins/modals/add-education.jade",
-          "output": "mixins/modals/add-education.html",
-          "name": "add-education.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "adb040f2": {
-          "id": "adb040f2",
-          "path": "mixins/modals/edit-education.jade",
-          "output": "mixins/modals/edit-education.html",
-          "name": "edit-education.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
         },
         "709c735c": {
           "id": "709c735c",
@@ -1337,6 +1264,336 @@
             "cbeead95"
           ],
           "type": "sass"
+        },
+        "b204e622": {
+          "id": "b204e622",
+          "path": "images/dobri.png",
+          "output": "images/dobri.png",
+          "name": "dobri.png",
+          "category": "IMAGE",
+          "size": 95003,
+          "type": "png",
+          "initialSize": 95003,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1eab9eda": {
+          "id": "1eab9eda",
+          "path": "mixins/jobs/job-aspire.html",
+          "output": "mixins/jobs/job-aspire.html",
+          "name": "job-aspire.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "600b18bb": {
+          "id": "600b18bb",
+          "path": "mixins/shoutouts/shoutout-main-information.html",
+          "output": "mixins/shoutouts/shoutout-main-information.html",
+          "name": "shoutout-main-information.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "d974a173": {
+          "id": "d974a173",
+          "path": "mixins/shoutouts/default-shoutout.html",
+          "output": "mixins/shoutouts/default-shoutout.html",
+          "name": "default-shoutout.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "f31545c4": {
+          "id": "f31545c4",
+          "path": "mixins/shoutouts/shoutout.html",
+          "output": "mixins/shoutouts/shoutout.html",
+          "name": "shoutout.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "3e10f747": {
+          "id": "3e10f747",
+          "path": "mixins/jobs/default-job.html",
+          "output": "mixins/jobs/default-job.html",
+          "name": "default-job.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "347861ad": {
+          "id": "347861ad",
+          "path": "mixins/jobs/job-kaiser.html",
+          "output": "mixins/jobs/job-kaiser.html",
+          "name": "job-kaiser.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "cd62464f": {
+          "id": "cd62464f",
+          "path": "mixins/jobs/jobs-main-information.html",
+          "output": "mixins/jobs/jobs-main-information.html",
+          "name": "jobs-main-information.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "f92bf22c": {
+          "id": "f92bf22c",
+          "path": "mixins/modals/new-test-modal.html",
+          "output": "mixins/modals/new-test-modal.html",
+          "name": "new-test-modal.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "d10af881": {
+          "id": "d10af881",
+          "path": "mixins/stories/default-story.html",
+          "output": "mixins/stories/default-story.html",
+          "name": "default-story.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "63fbb8f5": {
+          "id": "63fbb8f5",
+          "path": "mixins/stories/stories-main-information.html",
+          "output": "mixins/stories/stories-main-information.html",
+          "name": "stories-main-information.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "ef2bde9e": {
+          "id": "ef2bde9e",
+          "path": "mixins/accomplishments/accomplishment-full.html",
+          "output": "mixins/accomplishments/accomplishment-full.html",
+          "name": "accomplishment-full.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "f85e5d60": {
+          "id": "f85e5d60",
+          "path": "mixins/accomplishments/accomplishment-image.html",
+          "output": "mixins/accomplishments/accomplishment-image.html",
+          "name": "accomplishment-image.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e00fe2db": {
+          "id": "e00fe2db",
+          "path": "mixins/accomplishments/accomplishment.html",
+          "output": "mixins/accomplishments/accomplishment.html",
+          "name": "accomplishment.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "51e482fd": {
+          "id": "51e482fd",
+          "path": "mixins/accomplishments/default-accomplishment-job.html",
+          "output": "mixins/accomplishments/default-accomplishment-job.html",
+          "name": "default-accomplishment-job.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "a9ecc123": {
+          "id": "a9ecc123",
+          "path": "mixins/accomplishments/default-accomplishment-story.html",
+          "output": "mixins/accomplishments/default-accomplishment-story.html",
+          "name": "default-accomplishment-story.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1487956c": {
+          "id": "1487956c",
+          "path": "mixins/accomplishments/no-accomplishments.html",
+          "output": "mixins/accomplishments/no-accomplishments.html",
+          "name": "no-accomplishments.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "89cb3405": {
+          "id": "89cb3405",
+          "path": "mixins/educations/education-electrical.html",
+          "output": "mixins/educations/education-electrical.html",
+          "name": "education-electrical.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0411646b": {
+          "id": "0411646b",
+          "path": "mixins/educations/education-main-information.html",
+          "output": "mixins/educations/education-main-information.html",
+          "name": "education-main-information.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6826f3a1": {
+          "id": "6826f3a1",
+          "path": "mixins/educations/education-policy.html",
+          "output": "mixins/educations/education-policy.html",
+          "name": "education-policy.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "91e5d431": {
+          "id": "91e5d431",
+          "path": "styles/jobs.css",
+          "output": "styles/jobs-dist.css",
+          "name": "jobs.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "7f4d346a": {
+          "id": "7f4d346a",
+          "path": "styles/stories.css",
+          "output": "styles/stories-dist.css",
+          "name": "stories.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "17b00803": {
+          "id": "17b00803",
+          "path": "styles/shoutout.css",
+          "output": "styles/shoutout-dist.css",
+          "name": "shoutout.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "95d1c58c": {
+          "id": "95d1c58c",
+          "path": "mixins/modals/new-modals/edit-job.jade",
+          "output": "mixins/modals/new-modals/edit-job.html",
+          "name": "edit-job.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "3b0dfea4": {
+          "id": "3b0dfea4",
+          "path": "mixins/modals/new-modals/add-job.jade",
+          "output": "mixins/modals/new-modals/add-job.html",
+          "name": "add-job.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "a3817819": {
+          "id": "a3817819",
+          "path": "mixins/modals/new-modals/add-education.jade",
+          "output": "mixins/modals/new-modals/add-education.html",
+          "name": "add-education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "ce17f808": {
+          "id": "ce17f808",
+          "path": "mixins/modals/new-modals/edit-education.jade",
+          "output": "mixins/modals/new-modals/edit-education.html",
+          "name": "edit-education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
         }
       },
       "deploymentHistory": {},
