BIG update for profile page.

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -138,44 +138,6 @@
           ],
           "type": "jade"
         },
-        "3c7f5b71": {
-          "id": "3c7f5b71",
-          "path": "styles/accomplishment-modal.sass",
-          "output": "styles/accomplishment-modal.css",
-          "name": "accomplishment-modal.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "59fd29df"
-          ],
-          "type": "sass"
-        },
-        "b83f197a": {
-          "id": "b83f197a",
-          "path": "styles/jobs.sass",
-          "output": "styles/jobs.css",
-          "name": "jobs.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "753550a2": {
           "id": "753550a2",
           "path": "styles/header.sass",
@@ -294,24 +256,6 @@
           ],
           "type": "sass"
         },
-        "0aac739a": {
-          "id": "0aac739a",
-          "path": "styles/shoutout.sass",
-          "output": "styles/shoutout.css",
-          "name": "shoutout.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "f414cb05": {
           "id": "f414cb05",
           "path": "styles/main.css",
@@ -327,24 +271,6 @@
           "imported": false,
           "parents": [],
           "type": "css"
-        },
-        "4f801a47": {
-          "id": "4f801a47",
-          "path": "styles/stories.sass",
-          "output": "styles/stories.css",
-          "name": "stories.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
         },
         "d88ddc7f": {
           "id": "d88ddc7f",
@@ -792,26 +718,6 @@
           "parents": [],
           "type": "jade"
         },
-        "fd629e0d": {
-          "id": "fd629e0d",
-          "path": "styles/timeline-post.sass",
-          "output": "styles/timeline-post.css",
-          "name": "timeline-post.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "59fd29df"
-          ],
-          "type": "sass"
-        },
         "f7971abe": {
           "id": "f7971abe",
           "path": "mixins/modals/timeline-modal.jade",
@@ -871,51 +777,11 @@
           ],
           "type": "jade"
         },
-        "e4c5706f": {
-          "id": "e4c5706f",
-          "path": "styles/timeline-add-photos.sass",
-          "output": "styles/timeline-add-photos.css",
-          "name": "timeline-add-photos.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "59fd29df"
-          ],
-          "type": "sass"
-        },
         "91204b8f": {
           "id": "91204b8f",
           "path": "styles/dropdowns.sass",
           "output": "styles/dropdowns.css",
           "name": "dropdowns.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "59fd29df"
-          ],
-          "type": "sass"
-        },
-        "dc4417b8": {
-          "id": "dc4417b8",
-          "path": "styles/modals.sass",
-          "output": "styles/modals.css",
-          "name": "modals.sass",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -1349,17 +1215,6 @@
           "parents": [],
           "type": "html"
         },
-        "f92bf22c": {
-          "id": "f92bf22c",
-          "path": "mixins/modals/new-test-modal.html",
-          "output": "mixins/modals/new-test-modal.html",
-          "name": "new-test-modal.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "d10af881": {
           "id": "d10af881",
           "path": "mixins/stories/default-story.html",
@@ -1480,54 +1335,6 @@
           "imported": false,
           "parents": [],
           "type": "html"
-        },
-        "91e5d431": {
-          "id": "91e5d431",
-          "path": "styles/jobs.css",
-          "output": "styles/jobs-dist.css",
-          "name": "jobs.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "7f4d346a": {
-          "id": "7f4d346a",
-          "path": "styles/stories.css",
-          "output": "styles/stories-dist.css",
-          "name": "stories.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "17b00803": {
-          "id": "17b00803",
-          "path": "styles/shoutout.css",
-          "output": "styles/shoutout-dist.css",
-          "name": "shoutout.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         },
         "95d1c58c": {
           "id": "95d1c58c",
@@ -1674,6 +1481,205 @@
           "path": "js/functions/modals/openClose.js",
           "output": "js/functions/modals/openClose-dist.js",
           "name": "openClose.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "73810c6e": {
+          "id": "73810c6e",
+          "path": "mixins/tabs/work-experience.jade",
+          "output": "mixins/tabs/work-experience.html",
+          "name": "work-experience.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "97b652a0": {
+          "id": "97b652a0",
+          "path": "mixins/tabs/education.jade",
+          "output": "mixins/tabs/education.html",
+          "name": "education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "9a63bee0": {
+          "id": "9a63bee0",
+          "path": "mixins/tabs/languages.jade",
+          "output": "mixins/tabs/languages.html",
+          "name": "languages.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "52752c4b": {
+          "id": "52752c4b",
+          "path": "mixins/tabs/gigs.jade",
+          "output": "mixins/tabs/gigs.html",
+          "name": "gigs.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "7be48a15": {
+          "id": "7be48a15",
+          "path": "mixins/modals/new-modals/add-language.jade",
+          "output": "mixins/modals/new-modals/add-language.html",
+          "name": "add-language.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "e84d54f5": {
+          "id": "e84d54f5",
+          "path": "mixins/modals/new-modals/edit-language.jade",
+          "output": "mixins/modals/new-modals/edit-language.html",
+          "name": "edit-language.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "b8724c19": {
+          "id": "b8724c19",
+          "path": "mixins/modals/new-modals/add-skill.jade",
+          "output": "mixins/modals/new-modals/add-skill.html",
+          "name": "add-skill.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "c83ae23b": {
+          "id": "c83ae23b",
+          "path": "mixins/modals/new-modals/edit-skill.jade",
+          "output": "mixins/modals/new-modals/edit-skill.html",
+          "name": "edit-skill.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "9ef16fc6": {
+          "id": "9ef16fc6",
+          "path": "mixins/modals/new-modals/edit-profile.jade",
+          "output": "mixins/modals/new-modals/edit-profile.html",
+          "name": "edit-profile.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "e71e0f7b": {
+          "id": "e71e0f7b",
+          "path": "js/functions/modals/datePickerInit.js",
+          "output": "js/functions/modals/datePickerInit-dist.js",
+          "name": "datePickerInit.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "cae603b0": {
+          "id": "cae603b0",
+          "path": "js/functions/modals/loadProfileInputs.js",
+          "output": "js/functions/modals/loadProfileInputs-dist.js",
+          "name": "loadProfileInputs.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "863febc1": {
+          "id": "863febc1",
+          "path": "js/functions/modals/updateProfile.js",
+          "output": "js/functions/modals/updateProfile-dist.js",
+          "name": "updateProfile.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "25ad6d80": {
+          "id": "25ad6d80",
+          "path": "js/functions/modals/collectData.js",
+          "output": "js/functions/modals/collectData-dist.js",
+          "name": "collectData.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
